tests/cases/scc/error/0026-numargs2.c
//!necc-dbg @ -as

int
fn(int a, int b)
{
	return a+b;
}

int
main(void)
{
	fn(1, 2, 3);

	return 0;
}
